# StreamFuse

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  sftpgo-connections.json  tmp_dashboard_block.txt  tmp_stats_service_before.txt
backend/: alembic.ini  pyproject.toml  streamfuse.db
backend/app/: main.py
backend/app/adapters/samba/: __init__.py  client.py
backend/app/adapters/sftpgo/: client.py  (+3 more)
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/domain/: enums.py
backend/app/jobs/: background_sync.py  import_tautulli.py  poll_samba.py  poll_sftpgo.py  seed_mock_data.py  sync_job.py
backend/app/parsers/: __init__.py  activity_parser.py  media_parser.py  mediainfo_parser.py
backend/app/persistence/: db.py  seed.py
backend/app/poster_resolver/: resolver.py
backend/app/security/: auth.py
backend/app/services/: auth_service.py  dashboard_widget_service.py  nic_rate_monitor.py  samba_sync_service.py  session_service.py  settings_service.py  sftpgo_sync_service.py  stats_service.py  sync_service.py  tautulli_sync_service.py  unified_session_service.py  unraid_metrics_service.py  user_alias_service.py
backend/tests/contract/: test_adapters_contracts.py
backend/tests/integration/: test_dashboard_widget_api.py  test_settings_api.py  test_stats.py  test_stats_api.py  test_unified_sessions_api.py
backend/tests/unit/: test_health.py  test_media_parser.py  test_mediainfo_parser.py  test_poster_resolver.py  test_sftpgo_adapter.py  test_tautulli_adapter.py  test_unified_session_service.py
(+147 files in other folders)
